--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<vhv></vhv>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="USDC Printer $URRR - Earn USDC rewards every 5 minutes just by holding $URRR tokens">
+  <title>$URRR | USDC Printer</title>
+  <script type="module" crossorigin="" src="js/index-Ck-4C9gQ.js"></script>
+  <link rel="stylesheet" crossorigin="" href="css/index-D73JL61v.css">
+</head>
+
+<body>
+  <div id="root"></div>
+
+
+
+</body></html>
